test/classes/delete-free/lifetimes/iter-return-first-ref.good
iter-return-first-ref.chpl:15: In function 'getfirstref':
iter-return-first-ref.chpl:17: error: Reference to scoped variable i cannot be returned
